Admin Charts (#184)
* Initial testing with graphs

* Make graph more reactive

* Further work on charts

* Replace carbon charts with apex charts

* Fix chart reactivity and cleanup
